src/graph/snapshots/gammalooprs__graph__lmb__test__compatible_sub_lmb-2.snap
---
source: src/graph/lmb.rs
expression: lmb.to_string()
---
╭─────────┬────╮
│ Loop id │ 0  │
├─────────┼────┤
│ edge id │ e2 │
╰─────────┴────╯
╭─────────────┬────┬────┬────┬────╮
│ External id │ 0  │ 1  │ 2  │ 3  │
├─────────────┼────┼────┼────┼────┤
│ edge id     │ e0 │ e1 │ e3 │ e4 │
╰─────────────┴────┴────┴────┴────╯
╭──────┬───────┬─────────┬─────────┬─────────┬─────────╮
│ edge │ L0 e2 │ Ext0 e0 │ Ext1 e1 │ Ext2 e3 │ Ext3 e4 │
├──────┼───────┼─────────┼─────────┼─────────┼─────────┤
│ e0   │ .     │ .       │ .       │ .       │ .       │
│ e1   │ .     │ .       │ .       │ .       │ .       │
│ e2   │ +     │ .       │ .       │ .       │ .       │
│ e3   │ .     │ .       │ .       │ .       │ .       │
│ e4   │ .     │ .       │ .       │ .       │ .       │
│ e5   │ +     │ +       │ +       │ .       │ .       │
╰──────┴───────┴─────────┴─────────┴─────────┴─────────╯
