src/graph/snapshots/gammalooprs__graph__lmb__test__compatible_sub_lmb-4.snap
---
source: src/graph/lmb.rs
expression: "g.dot_lmb(&subgraph, &sub_lmb)"
---
digraph {
  node	 [shape=circle,height=0.1,label=""];
  overlap = "scale";
  layout = "neato";
  start=2;
  0	 [label=""];
  1	 [label=""];
  2	 [label=""];
  ext0	 [style=invis];
  ext0	-> 0:0	 [id=0 color="gray" label="Q(0)"];
  ext1	 [style=invis];
  ext1	-> 0:1	 [id=1 color="gray" label="Q(1)"];
  ext2	 [style=invis];
  ext2	-> 1:2	 [id=2 color="gray" label="Q(2)"];
  ext3	 [style=invis];
  ext3	-> 2:3	 [id=3 color="gray" label="Q(3)"];
  0:4:s	-> 1:5:s	 [id=4  color="red:blue;0.5" label="Q(4)"];
  0:6:s	-> 2:7:s	 [id=5  color="red:blue;0.5" label="-Q(2)-Q(3)-Q(4)+Q(7)"];
  1:8:s	-> 2:9:s	 [id=6  color="red:blue;0.5" label="Q(2)+Q(4)"];
  2:10	-> 0:11	 [id=7  color="gray" label="Q(7)"];
}
