src/graph/snapshots/gammalooprs__graph__lmb__test__complicated-2.snap
---
source: src/graph/lmb.rs
expression: "&g.loop_momentum_basis.to_string()"
---
╭─────────┬────┬────┬────┬────┬─────╮
│ Loop id │ 0  │ 1  │ 2  │ 3  │ 4   │
├─────────┼────┼────┼────┼────┼─────┤
│ edge id │ e1 │ e6 │ e8 │ e9 │ e12 │
╰─────────┴────┴────┴────┴────┴─────╯
╭─────────────┬────┬────┬────┬─────┬─────╮
│ External id │ 0  │ 1  │ 2  │ 3   │ 4   │
├─────────────┼────┼────┼────┼─────┼─────┤
│ edge id     │ e2 │ e3 │ e7 │ e11 │ e14 │
╰─────────────┴────┴────┴────┴─────┴─────╯
╭──────┬───────┬───────┬───────┬───────┬────────┬─────────┬─────────┬─────────┬──────────┬──────────╮
│ edge │ L0 e1 │ L1 e6 │ L2 e8 │ L3 e9 │ L4 e12 │ Ext0 e2 │ Ext1 e3 │ Ext2 e7 │ Ext3 e11 │ Ext4 e14 │
├──────┼───────┼───────┼───────┼───────┼────────┼─────────┼─────────┼─────────┼──────────┼──────────┤
│ e0   │ -     │ .     │ .     │ .     │ +      │ -       │ .       │ .       │ .        │          │
│ e1   │ +     │ .     │ .     │ .     │ .      │ .       │ .       │ .       │ .        │          │
│ e2   │ .     │ .     │ .     │ .     │ .      │ +       │ .       │ .       │ .        │ .        │
│ e3   │ .     │ .     │ .     │ .     │ .      │ .       │ +       │ .       │ .        │ .        │
│ e4   │ .     │ .     │ .     │ .     │ .      │ .       │ .       │ +       │ .        │          │
│ e5   │ -     │ -     │ .     │ .     │ +      │ -       │ -       │ -       │ .        │          │
│ e6   │ .     │ +     │ .     │ .     │ .      │ .       │ .       │ .       │ .        │          │
│ e7   │ .     │ .     │ .     │ .     │ .      │ .       │ .       │ +       │ .        │ .        │
│ e8   │ .     │ .     │ +     │ .     │ .      │ .       │ .       │ .       │ .        │          │
│ e9   │ .     │ .     │ .     │ +     │ .      │ .       │ .       │ .       │ .        │          │
│ e10  │ .     │ .     │ -     │ -     │ .      │ .       │ .       │ +       │ .        │          │
│ e11  │ .     │ .     │ .     │ .     │ .      │ .       │ .       │ .       │ +        │ .        │
│ e12  │ .     │ .     │ .     │ .     │ +      │ .       │ .       │ .       │ .        │          │
│ e13  │ .     │ +     │ .     │ .     │ -      │ +       │ +       │ +       │ .        │          │
│ e14  │ .     │ .     │ .     │ .     │ .      │ -       │ -       │ -       │ -        │ .        │
╰──────┴───────┴───────┴───────┴───────┴────────┴─────────┴─────────┴─────────┴──────────┴──────────╯
