src/graph/snapshots/gammalooprs__graph__lmb__test__complicated-3.snap
---
source: src/graph/lmb.rs
expression: "g.dot_lmb(&g.full_filter(), &g.loop_momentum_basis)"
---
digraph {
  node	 [shape=circle,height=0.1,label=""];
  overlap = "scale";
  layout = "neato";
  start=2;
  0	 [label=""];
  1	 [label=""];
  4	 [label=""];
  6	 [label=""];
  2	 [label=""];
  3	 [label=""];
  5	 [label=""];
  ext0	 [style=invis];
  ext0	-> 0:0:s	 [id=0 color="blue" label="-Q(1)-Q(2)-Q(3)"];
  ext1	 [style=invis];
  ext1	-> 0:1:s	 [id=1 color="blue" label="Q(1)"];
  ext2	 [style=invis];
  ext2	-> 0:2:s	 [id=2 color="blue" label="Q(2)"];
  ext3	 [style=invis];
  ext3	-> 0:3:s	 [id=3 color="blue" label="Q(3)"];
  ext4	 [style=invis];
  ext4	-> 1:4:s	 [id=4 color="blue" label="-Q(5)-Q(6)"];
  ext5	 [style=invis];
  ext5	-> 1:5:s	 [id=5 color="blue" label="Q(5)"];
  ext6	 [style=invis];
  ext6	-> 1:6:s	 [id=6 color="blue" label="Q(6)"];
  ext7	 [style=invis];
  ext7	-> 4:7:s	 [id=7 color="blue" label="-Q(8)-Q(9)"];
  ext8	 [style=invis];
  ext8	-> 4:8:s	 [id=8 color="blue" label="Q(8)"];
  ext9	 [style=invis];
  ext9	-> 6:9:s	 [id=9 color="blue" label="Q(9)"];
  0:10:s	-> 0:11:s	 [id=10  color="red:blue;0.5" label="Q(10)"];
  2:12:s	-> 2:13:s	 [id=11  color="red:blue;0.5" label="Q(11)"];
  2:14:s	-> 3:15:s	 [id=12  color="red:blue;0.5" label="0"];
  3:16:s	-> 3:17:s	 [id=13  color="red:blue;0.5" label="Q(13)"];
  4:18:s	-> 5:19:s	 [id=14  color="red:blue;0.5" label="-Q(8)"];
  5:20:s	-> 6:21:s	 [id=15  color="red:blue;0.5" label="Q(15)"];
  5:22:s	-> 6:23:s	 [id=16  color="red:blue;0.5" label="-Q(8)-Q(15)"];
}
