src/graph/snapshots/gammalooprs__graph__lmb__test__complicated-4.snap
---
source: src/graph/lmb.rs
expression: "&g.loop_momentum_basis.to_string()"
---
╭─────────┬─────┬─────┬─────┬─────╮
│ Loop id │ 0   │ 1   │ 2   │ 3   │
├─────────┼─────┼─────┼─────┼─────┤
│ edge id │ e15 │ e10 │ e11 │ e13 │
╰─────────┴─────┴─────┴─────┴─────╯
╭─────────────┬────┬────┬────┬────┬────┬────┬────┬────┬────┬────╮
│ External id │ 0  │ 1  │ 2  │ 3  │ 4  │ 5  │ 6  │ 7  │ 8  │ 9  │
├─────────────┼────┼────┼────┼────┼────┼────┼────┼────┼────┼────┤
│ edge id     │ e7 │ e8 │ e9 │ e4 │ e5 │ e6 │ e0 │ e1 │ e2 │ e3 │
╰─────────────┴────┴────┴────┴────┴────┴────┴────┴────┴────┴────╯
╭──────┬────────┬────────┬────────┬────────┬─────────┬─────────┬─────────┬─────────┬─────────┬─────────┬─────────┬─────────┬─────────┬─────────╮
│ edge │ L0 e15 │ L1 e10 │ L2 e11 │ L3 e13 │ Ext0 e7 │ Ext1 e8 │ Ext2 e9 │ Ext3 e4 │ Ext4 e5 │ Ext5 e6 │ Ext6 e0 │ Ext7 e1 │ Ext8 e2 │ Ext9 e3 │
├──────┼────────┼────────┼────────┼────────┼─────────┼─────────┼─────────┼─────────┼─────────┼─────────┼─────────┼─────────┼─────────┼─────────┤
│ e0   │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ +       │ .       │ .       │ .       │
│ e1   │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ +       │ .       │ .       │
│ e2   │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ +       │ .       │
│ e3   │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ -       │ -       │ -       │ .       │
│ e4   │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ +       │ .       │ .       │ .       │ .       │ .       │ .       │
│ e5   │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ .       │ +       │ .       │ .       │ .       │ .       │ .       │
│ e6   │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ -       │ -       │ .       │ .       │ .       │ .       │ .       │
│ e7   │ .      │ .      │ .      │ .      │ +       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │
│ e8   │ .      │ .      │ .      │ .      │ .       │ +       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │
│ e9   │ .      │ .      │ .      │ .      │ -       │ -       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │
│ e10  │ .      │ +      │ .      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │         │
│ e11  │ .      │ .      │ +      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │         │
│ e12  │ .      │ .      │ .      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │         │
│ e13  │ .      │ .      │ .      │ +      │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │         │
│ e14  │ .      │ .      │ .      │ .      │ +       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │         │
│ e15  │ +      │ .      │ .      │ .      │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │         │
│ e16  │ -      │ .      │ .      │ .      │ +       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │ .       │         │
╰──────┴────────┴────────┴────────┴────────┴─────────┴─────────┴─────────┴─────────┴─────────┴─────────┴─────────┴─────────┴─────────┴─────────╯
