src/graph/snapshots/gammalooprs__graph__lmb__test__complicated-6.snap
---
source: src/graph/lmb.rs
expression: "&lmb.to_string()"
---
╭─────────┬────╮
│ Loop id │ 0  │
├─────────┼────┤
│ edge id │ e1 │
╰─────────┴────╯
╭─────────────╮
│ External id │
├─────────────┤
│ edge id     │
╰─────────────╯
╭──────┬───────╮
│ edge │ L0 e1 │
├──────┼───────┤
│ e0   │ .     │
│ e1   │ +     │
│ e2   │ -     │
╰──────┴───────╯
